bk_ida/bzip2ida/c1/cadvise
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/cadvise/src/bzip2.c:1255:10: error: use of undeclared identifier 'unk_40EBF7'
fwrite( &unk_40EBF7, 0xF0uLL, 1uLL, stderr); 
         ^
1 error generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/cadvise/src/obj/bzip2.o] Error 1
